# LogServer

./: .gitignore  CMakeLists.txt  config.json  config.json.example  package-lock.json  package.json  webpack.config.js
assets/: index.html  main.js
assets/css/: main.css
assets/js-minify/: bundle-compile.js  bundle-compile.js.map
assets/jsx/: app.jsx  sidebar.jsx
backend/: .clang-format  .gitignore  CMakeLists.txt  build.sh  config.json.example  main.cpp  style.sh
backend/Common/: Config.cpp  Config.h  LogLevel.h  StrTemplate.cpp  StrTemplate.h
backend/Controllers/Example/: ExampleController.cpp  ExampleController.h  ExampleEchoAction.cpp  ExampleEchoAction.h
backend/Controllers/Logs/: LogsController.cpp  LogsController.h  LogsFilesAction.cpp  LogsFilesAction.h  LogsMsgsAction.cpp  LogsMsgsAction.h  SocketLogsFilesAction.cpp  SocketLogsFilesAction.h
backend/Controllers/LogsLevels/: GetLogsLevelsAction.cpp  GetLogsLevelsAction.h  LogsLevelsController.cpp  LogsLevelsController.h
backend/Controllers/Memory/: MemoryController.cpp  MemoryController.h  MemoryInfoCurrent.cpp  MemoryInfoCurrent.h
backend/Server/: Action.cpp  Action.h  Request.cpp  Request.h  Response.cpp  Response.h  Route.cpp  Route.h  Server.cpp  Server.h  WebSocketAction.cpp  WebSocketAction.h  WebSocketConn.cpp  WebSocketRoute.cpp  WebSocketRoute.h  common.h
backend/Server/WebSocket/: Frame.cpp  Frame.h  FrameFactory.cpp  FrameFactory.h  FrameReader.cpp  FrameReader.h  FrameWriter.cpp  FrameWriter.h  SocketAction.cpp  SocketAction.h  SocketActionGenerator.cpp  SocketActionGenerator.h  SocketConnection.cpp  SocketConnection.h  SocketMsg.cpp  SocketMsg.h  SocketRoute.cpp  SocketRoute.h  SocketUserData.cpp  SocketUserData.h
backend/Services/: LogFile.cpp  LogFile.h  LogsReader.cpp  LogsReader.h  MemoryInfo.cpp  MemoryInfo.h  MemoryInfoData.h
frontend/: app.js  package-lock.json  package.json  webpack.config.js
frontend/assets/: config.js  index.html
frontend/assets/js/: common.js  log-file.js  log-files-notify.js  log-level.js  logs-service.js  main.js  service-factory.js  service-listener.js
frontend/assets/jsx/: app.jsx  main-content-logs.jsx  main-content.jsx  sidebar-link.jsx
src/: main.cpp
src/Common/: Config.cpp  Config.h  LogLevel.cpp
src/Controllers/Logs/: LogsController.cpp  LogsFilesAction.cpp
src/Controllers/LogsLevels/: GetLogsLevelsAction.cpp  GetLogsLevelsAction.h
src/Controllers/Memory/: MemoryController.h  MemoryInfoCurrent.cpp  MemoryInfoCurrent.h
src/Server/: Action.cpp  HomePageActionFile.cpp  HomePageActionFile.h  Request.cpp  Route.cpp  Route.h  Server.cpp  Server.h  WebSocketConn.cpp  WebSocketConn.h  common.h
src/Services/: LogFile.cpp  LogsReader.h  MemoryInfo.h  MemoryInfoData.cpp
src/json/: json.hpp
